# leakwatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  demo.tape
examples/: news-sites.txt  sites.txt
src/leakwatch/: __init__.py  __main__.py  classify.py  cli.py  engine.py  instrument.py  model.py  report.py  score.py  security.py  tui.py
src/leakwatch/data/: trackers.json
tests/: test_classify.py  test_cli.py  test_engine.py  test_report.py  test_score.py  test_security.py
