[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leakwatch"
version = "0.3.0"
description = "Scan any website and see every tracker, data broker, fingerprinting trick, and session recorder watching you — live, in your terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "gazzycodes" }]
keywords = [
    "privacy",
    "trackers",
    "security",
    "fingerprinting",
    "tui",
    "playwright",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "playwright>=1.40",
    "textual>=0.60",
]

[project.optional-dependencies]
dev = ["ruff", "build"]

[project.urls]
Homepage = "https://github.com/gazzycodes/leakwatch"
Repository = "https://github.com/gazzycodes/leakwatch"
Issues = "https://github.com/gazzycodes/leakwatch/issues"

[project.scripts]
leakwatch = "leakwatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leakwatch"]

[tool.hatch.build.targets.wheel.force-include]
"src/leakwatch/data" = "leakwatch/data"

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
